--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="mobile-web-app-capable" content="yes" />
-    <title>Temple Run 3D</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Temple Run React</title>
     <!-- Preload audio files for better performance -->
-    <link rel="preload" href="/sounds/coin_pickup.mp3" as="audio" type="audio/mpeg">
+    <link
+      rel="preload"
+      href="/sounds/coin_pickup.mp3"
+      as="audio"
+      type="audio/mpeg"
+    />
   </head>
   <body>
     <div id="root"></div>
